@@ -1,3 +1,7 @@
+2018-02-25  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSeq.h: Fix boundary checks searching for unicode strings.
+
 2018-02-16  Yavor Doganov  <yavor@gnu.org>
 
 	* Tests/base/NSNumberFormatter/basic10_4.m: Extend test expression
